# nemotron-lora-finetune

./: .gitignore  EVAL.md  README.md  environment.yml  exploratory-data-analysis  exploratory-data-analysis.ipynb  nemotron-initial-finetune.ipynb  pyproject.toml  requirements.txt
examples/: gemma-4-e4b.txt
notebooks/: chain-of-thought.ipynb  exploratory-data-analysis.ipynb  nemotron-initial-finetune.ipynb
src/agents/: __init__.py  state.py
src/agents/prompts/: solve_puzzle.yaml
src/chain/: __init__.py  data_types.py  generator.py  main.py  pipeline.py  prompt_drafts.txt  prompts.py  reasoning_chain.py  utils.py
src/registry/: __init__.py  datasets.py  models.py
src/registry/utils/: datasets_utils.py
